<resources>
    <string name="navigation_drawer_open">Адкрыць навігацыйнае меню</string>
    <string name="navigation_drawer_close">Закрыць навігацыйнае меню</string>
    <string name="app_name">Малітоўнік</string>
    <string name="kaliandar">Каляндар БГКЦ</string>
    <string name="kaliandar2">КАЛЯНДАР БГКЦ</string>
    <string name="stary_zapaviet">Стары Запавет</string>
    <string name="novy_zapaviet">Новы Запавет</string>
    <string name="title_activity_stary_zapaviet2">Стары Запавет</string>
    <string name="exit">Націсьніце другі раз, каб закрыць</string>
    <string name="error">Памылка</string>
    <string name="error_up">ПАМЫЛКА</string>
    <string name="ok">Добра</string>
    <string name="cansel">Скасаваць</string>
    <string name="ok_u">ДОБРА</string>
    <string name="cansel_u">СКАСАВАЦЬ</string>
    <string name="close">Зачыніць</string>
    <string name="title_biblia">БІБЛІЯ (пераклад В. Сёмухі)</string>
    <string name="title_biblia_bokun">БІБЛІЯ (пераклад А. Бокуна)</string>
    <string name="title_biblia_charniauski">БІБЛІЯ (пераклад У. Чарняўскага 2017)</string>
    <string name="title_biblia2">Пераклад В. Сёмухі</string>
    <string name="title_biblia_bokun2">Пераклад А. Бокуна</string>
    <string name="title_biblia_charniauski2">Пераклад У. Чарняўскага 2017</string>
    <string name="tools_item">Налады</string>
    <string name="tools_admin_item">Налады%1$s</string>
    <string name="search_call">Абраць сёньняшні дзень</string>
    <string name="data_search">ВЫБЯРЫЦЕ РАЗЬДЗЕЛ</string>
    <string name="razdzel">Разьдзел</string>
    <string name="psalom">Псальма</string>
    <string name="liturgikon">БОГАСЛУЖБОВЫЯ ТЭКСТЫ</string>
    <string name="liturgikon2">Богаслужбовыя тэксты</string>
    <string-array name="malitvy">
        <item>Ранішняя малітвы</item>
        <item>Вячэрнія малітвы</item>
        <item>Прынагодныя малітвы</item>
    </string-array>
    <string-array name="akafisty">
        <item>Пра Акафіст</item>
        <item>Найсьвяцейшай Багародзіцы</item>
        <item>Маці Божай Нястомнай Дапамогі</item>
        <item>перад Жыровіцкай іконай</item>
        <item>у гонар Падляшскіх мучанікаў</item>
        <item>Імю Ісусаваму</item>
        <item>да Духа Сьвятога</item>
        <item>сьв. Апосталам Пятру і Паўлу</item>
        <item>Акафіст сьв. Язэпу</item>
        <item>Акафіст Росіцкім мучанікам</item>
    </string-array>
    <string name="akafist0">Пра Акафіст</string>
    <string name="akafist1">Найсьвяцейшай Багародзіцы</string>
    <string name="akafist2">Маці Божай Нястомнай дапамогі</string>
    <string name="akafist3">перад Жыровіцкай іконай</string>
    <string name="akafist4">у гонар Падляшскіх мучанікаў</string>
    <string name="akafist5">Імю Ісусаваму</string>
    <string name="akafist6">да Духа Сьвятога</string>
    <string name="akafist7">сьвятым апосталам Пятру і Паўлу</string>
    <string name="other">ІНШАЕ</string>
    <string name="czytanne">Чытаньне</string>
    <string name="czytanne3">Чытаньне, за %1$d %2$s</string>
    <string name="czytanne2">Чытаньні</string>
    <string name="carkva_sviaty">Царкоўныя сьвяты</string>
    <string name="kaliandar_bel">Даты Вялікадня</string>
    <string name="font_size_app2">Шрыфт</string>
    <string name="font_size_app">ВЫБРАЦЬ ПАМЕР ШРЫФТУ</string>
    <string name="menu_font_size_app">Выбраць памер шрыфту</string>
    <string name="apav_only">Толькі абавязковыя сьвяты</string>
    <string name="apav_all">Усе сьвяты</string>
    <string name="apav_no">Без апавяшчэньняў</string>
    <string name="pascha">Даты Вялікадня</string>
    <string name="sviaty">Царкоўныя сьвяты</string>
    <string name="pamiatka">Памятка для вернiкаў</string>
    <string name="natatka_add">Дадаць нататку</string>
    <string name="natatka_name">Назва нататкі</string>
    <string name="natatka">Нататка</string>
    <string name="maje_natatki">МАЕ НАТАТКІ</string>
    <string name="maje_natatki2">Мае нататкі</string>
    <string name="add_color_zakladka">КОЛЕР ЗАКЛАДКІ</string>
    <string name="sound">Гук</string>
    <string name="vibration">Вібрацыя</string>
    <string name="symbols">УМОЎНЫЯ ПАЗНАЧЭНЬНІ</string>
    <string name="munu_symbols">Умоўныя пазначэньні</string>
    <string name="help">Дапамагчы праекту</string>
    <string name="pra_nas">Пра праграму</string>
    <string name="juljan">Юльянскі каляндар</string>
    <string name="hryharyjan">Грыгарыянскі каляндар</string>
    <string name="zmiest">Сьвятыя і сьвяты</string>
    <string name="sviatyia">Сьвятыя</string>
    <string name="pascha_kaliandar_bel">ГРЫГАРЫЯНСКІ КАЛЯНДАР У БЕЛАРУСІ. ПАСХАЛІЯ</string>
    <string name="paschalia">Пасхалія</string>
    <string name="fullscreen">Тэксты на ўвесь экран</string>
    <string name="song">ПЕСЬНІ</string>
    <string name="data_search2">УВЯДЗІЦЕ ГОД\nЗ 1583 ПА 2093:</string>
    <string name="data_search3">Увядзіце год</string>
    <string-array name="ruzanec">
        <item>Малітвы на вяровіцы</item>
        <item>Молімся на ружанцы</item>
        <item>Разважаньні на Ружанец</item>
        <item>Частка I. Радасныя таямніцы (пн, сб)</item>
        <item>Частка II. Балесныя таямніцы (аўт, пт)</item>
        <item>Частка III. Слаўныя таямніцы (ср, ндз)</item>
        <item>Частка IV. Таямніцы сьвятла (чц)</item>
    </string-array>
    <string name="malitvy1">Малітвы ранішнія</string>
    <string name="malitvy2">Малітвы вячэрнія</string>
    <string name="S1">ПАСХА ХРЫСТОВА (ВЯЛІКДЗЕНЬ)</string>
    <string name="S2">Богазьяўленьне (Вадохрышча)</string>
    <string name="S3">Сустрэча Госпада нашага Ісуса Хрыста (Грамніцы)</string>
    <string name="S4">Дабравешчаньне</string>
    <string name="S5">Уваход Гасподні ў Ерусалім (Вербніца)</string>
    <string name="S6">Узьнясеньне Гасподняе (Ушэсьце)</string>
    <string name="S7">Зыход Сьвятога Духа (Тройца)</string>
    <string name="S8">Перамяненьне Гасподняе (Спас)</string>
    <string name="S9">Усьпеньне Найсьвяцейшай Багародзіцы</string>
    <string name="S10">Нараджэньне Найсьвяцейшай Багародзіцы</string>
    <string name="S11">Крыжаўзвышэньне</string>
    <string name="S12">Уваход у Храм Найсьвяцейшай Багародзіцы</string>
    <string name="S13">Нараджэньне Хрыстова (Каляды)</string>
    <string name="S14">Абрэзаньне Гасподняе</string>
    <string name="S15">Нараджэньне сьв. Яна Прадвесьніка і Хрысьціцеля</string>
    <string name="S16">Сьвятых вярхоўных апосталаў Пятра і Паўла</string>
    <string name="S17">Адсячэньне галавы сьв. Яна Прадвесьніка і Хрысьціцеля</string>
    <string name="S18">Покрыва Найсьвяцейшай Багародзіцы</string>
    <string name="Sv1">Заўтра сьвята</string>
    <string name="Sv2">Сьвята</string>
    <string name="Sv3">Заўтра абавязковае сьвята</string>
    <string name="Sv4">Абавязковае сьвята</string>
    <string name="Bright">Яркасьць</string>
    <string name="Bright3">ЯРКАСЬЦЬ</string>
    <string name="spovedz">Падрыхтоўка да споведзі</string>
    <string name="pesny1">Песьні праслаўленьня</string>
    <string name="pesny2">З малітвай за Беларусь</string>
    <string name="pesny3">Да Багародзіцы</string>
    <string name="pesny4">Калядныя</string>
    <string name="pesny5">Сьпевы Taize</string>
    <string name="prynagodnyia">Прынагодныя малітвы</string>
    <string name="search">Пошук песень</string>
    <string name="rsinaidal">Глава</string>
    <string name="psinaidal">Псалтирь</string>
    <string name="bsinaidal">БІБЛІЯ (Расейскі Сінадальны пераклад)</string>
    <string name="bsinaidal2">Расейскі Сінадальны пераклад</string>
    <string name="stsinaidal">Ветхий завет</string>
    <string name="novsinaidal">Новый завет</string>
    <string name="maranata">Штодзённае чытаньне Бібліі за год:</string>
    <string name="maranata2">Штодзённае чытаньне Бібліі за год, за %1$d %2$s</string>
    <string name="maranata_opis">Штодзённае чытаньне Бібліі за год, паводле плану супольнасьці «Μαραν αθα»</string>
    <string name="pasliaPrychscia">Малітвы пасьля сьвятога прычасьця</string>
    <string name="vybranoe">Дадаць у Выбранае</string>
    <string name="vybranoe_del">Выдаліць з Выбранага</string>
    <string name="MenuVybranoe">ВЫБРАНАЕ</string>
    <string name="Trash">Выдаліць усё</string>
    <string name="remove">ВЫДАЛІЦЬ?</string>
    <string name="addVybranoe">Дабаўлена ў Выбранае</string>
    <string name="autoScroll">Аўтапрагортка</string>
    <string name="parafii">Дзе знайсьці грэка-католікаў Беларусі</string>
    <string name="paralel_smoll">Паралельныя месцы для %1$s</string>
    <string name="paralel_opis">%1$s \n</string>
    <string name="sabytie">Падзеі</string>
    <string name="poshuk_semuxa">Пошук па перакладу В. Сёмухі</string>
    <string name="poshuk">Пошук</string>
    <string name="poshuk_sinoidal">Пошук па Сінадальным расейскім перакладзе</string>
    <string name="poshuk_bokun">Пошук па перакладу А. Бокуна</string>
    <string name="poshuk_charniauski">Пошук па перакладу У. Чарняўскага 2017</string>
    <string name="procent">%1$d%%</string>
    <string name="sabytieKali">Калі: %1$s %2$s \n%3$s\nРэдагаваць/Выдаліць</string>
    <string name="sabytieDoKuda">Пачатак: %1$s %2$s \nКанец: %3$s %4$s \n%5$s\nРэдагаваць/Выдаліць</string>
    <string name="error_ch">Памылка, даруйце\n</string>
    <string name="error_ch2">Памылка, даруйце</string>
    <string name="error_ch_email">carkvagazeta@gmail.com\nНапішыце пра памылку ў праграме\n\nЗагадзя шчыра дзякуем!</string>
    <string name="Sabytie">%1$s%2$d.%3$s%4$d.%5$d</string>
    <string name="seash">(%1$d)</string>
    <string name="sabytie_name">Назва падзеі</string>
    <string name="sabytie_pachatak">Пачатак:</string>
    <string name="Sabytie_end">Канец:</string>
    <string name="Sabytie_uved">Паведаміць за:</string>
    <string name="Sabytie_repit">Паўтор:</string>
    <string name="Sabytie_no_data_zakan">Няма даты заканчэньня</string>
    <string name="Sabytie_install_kolkast_paz">Усталяваць колькасьць разоў</string>
    <string name="widget_day_d_n">Начны</string>
    <string name="redagaktirovat">Рэдагаваць</string>
    <string name="search_svityia">Пошук сьвятых і сьвятаў</string>
    <string name="set_page_bibliateka">Выбраць старонку</string>
    <string name="paralel">Паралельныя месцы</string>
    <string name="vybor_daty">Выбраць дату</string>
    <string name="searche_text">Пошук у тэксьце</string>
    <string name="sort_alf">Сартаваць паводле алфавіту</string>
    <string name="sort_time">Сартаваць паводле часу</string>
    <string name="download_opisanie_all">Спампаваць усе іконы</string>
    <string name="bibliateka_niadaunia">Нядаўна прагледжанае</string>
    <string name="bibliateka_gistoryia_carkvy">Гісторыя Царквы</string>
    <string name="bibliateka_malitouniki">Малітоўнікі</string>
    <string name="bibliateka_speuniki">Сьпеўнікі</string>
    <string name="bibliateka_rel_litaratura">Рэлігійная літаратура</string>
    <string name="bibliateka_file">Выбраць файл</string>
    <string name="share">Падзяліцца&#8230;</string>
    <string name="add_sabytie">Дадаць падзею</string>
    <string name="del_sabytie">Выдаліць падзеі</string>
    <string name="save_sabytie">Захаваць</string>
    <string name="ekpan_on">Экран заўсёды ўключаны</string>
    <string name="help_davedka">ДАВЕДКА</string>
    <string name="skip_utran">Прапусьціць ютрань</string>
    <string name="piarliny">Пярліны</string>
    <string name="zmena_chastki">Зьменныя часткі</string>
    <string name="log_m">Лог праграмы</string>
    <string name="arx_num_gaz">Архіў нумароў газеты</string>
    <string name="update_program">Даступна абнаўленьне</string>
    <string name="gallery">Галерэя</string>
    <string name="gallery_slayd_show">Запусціць слайд-шоў</string>
    <string name="settings_gallery">Налады галерэі</string>
    <string name="perevody">Пераклады Бібліі</string>
    <string name="print">Раздрукаваць</string>
    <string name="dzen_noch">Дзень-ноч</string>
    <string name="zmest">ЗЬМЕСТ</string>
</resources>