<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sorttime"
        android:checkable="true"
        android:orderInCategory="100"
        android:title="@string/sort_time"
        app:showAsAction="never" />
    <item
        android:id="@+id/sortdate"
        android:checkable="true"
        android:orderInCategory="100"
        android:title="@string/sort_alf"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_glava"
        android:icon="@drawable/calendar"
        android:orderInCategory="100"
        android:title="@string/search_call"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_mun"
        android:icon="@drawable/calendar_full"
        android:orderInCategory="100"
        android:title="@string/vybor_daty"
        app:showAsAction="always" />
    <item
        android:id="@+id/tipicon"
        android:orderInCategory="100"
        android:title="@string/munu_symbols"
        app:showAsAction="never" />
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/tools_item"
        app:showAsAction="never" />
    <item
        android:id="@+id/sabytie"
        android:orderInCategory="100"
        android:title="@string/sabytie"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/plus"
        android:orderInCategory="100"
        android:title="@string/natatka_add"
        app:showAsAction="always" />
    <item
        android:id="@+id/search_sviatyia"
        android:orderInCategory="100"
        android:title="@string/search_svityia"
        app:showAsAction="never" />
    <item
        android:id="@+id/onas"
        android:orderInCategory="100"
        android:title="@string/pra_nas"
        app:showAsAction="never" />
    <item
        android:id="@+id/help"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="never" />
    <item
        android:id="@+id/prazdnik"
        android:icon="@drawable/search"
        android:orderInCategory="100"
        android:title="@string/carkva_sviaty"
        app:showAsAction="always" />
    <item
        android:id="@+id/trash"
        android:icon="@drawable/trash"
        android:orderInCategory="100"
        android:title="@string/Trash"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_font"
        android:orderInCategory="100"
        android:title="@string/menu_font_size_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_dzen_noch"
        android:orderInCategory="100"
        android:title="@string/dzen_noch"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_update"
        android:orderInCategory="100"
        android:title="@string/update_program"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_carkva"
        android:orderInCategory="100"
        android:title="@string/redagaktirovat"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_log"
        android:orderInCategory="100"
        android:title="@string/log_m"
        android:visible="false"
        app:showAsAction="never" />

</menu>