<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_auto"
        android:icon="@drawable/scroll_icon"
        android:orderInCategory="100"
        android:title="@string/autoScroll"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_title"
        android:icon="@drawable/list"
        android:orderInCategory="100"
        android:title="@string/zmest"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_font"
        android:orderInCategory="100"
        android:title="@string/menu_font_size_app"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_bright"
        android:orderInCategory="100"
        android:title="@string/Bright"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_set_page"
        android:orderInCategory="100"
        android:title="@string/set_page_bibliateka"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_inversion"
        android:checkable="true"
        android:orderInCategory="100"
        android:title="@string/inversion"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_trash"
        android:icon="@drawable/trash"
        android:orderInCategory="100"
        android:title="@string/Trash"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_rub_1"
        android:orderInCategory="100"
        android:title="@string/bibliateka_gistoryia_carkvy"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rub_2"
        android:orderInCategory="100"
        android:title="@string/bibliateka_malitouniki"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rub_3"
        android:orderInCategory="100"
        android:title="@string/bibliateka_speuniki"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rub_4"
        android:orderInCategory="100"
        android:title="@string/bibliateka_rel_litaratura"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rub_6"
        android:orderInCategory="100"
        android:title="@string/arx_num_gaz"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rub_0"
        android:orderInCategory="100"
        android:title="@string/bibliateka_niadaunia"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rub_5"
        android:orderInCategory="100"
        android:title="@string/bibliateka_file"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_carkva"
        android:orderInCategory="100"
        android:title="@string/redagaktirovat"
        android:visible="false"
        app:showAsAction="never" />
</menu>