<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_auto"
        android:icon="@drawable/scroll_icon"
        android:orderInCategory="100"
        android:title="@string/autoScroll"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_zmena"
        android:icon="@drawable/bibliya"
        android:orderInCategory="100"
        android:title="@string/zmena_chastki"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_vybranoe"
        android:icon="@android:drawable/btn_star_big_off"
        android:orderInCategory="100"
        android:title="@string/vybranoe"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_find"
        android:orderInCategory="100"
        android:title="@string/searche_text"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_fullscreen"
        android:orderInCategory="100"
        android:title="@string/fullscreen"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_font"
        android:orderInCategory="100"
        android:title="@string/menu_font_size_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_bright"
        android:orderInCategory="100"
        android:title="@string/Bright"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/share"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_dzen_noch"
        android:checkable="true"
        android:orderInCategory="100"
        android:title="@string/widget_day_d_n"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_carkva"
        android:orderInCategory="100"
        android:title="@string/redagaktirovat"
        android:visible="false"
        app:showAsAction="never" />
</menu>