<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_auto"
        android:icon="@drawable/scroll_icon"
        android:orderInCategory="100"
        android:title="@string/autoScroll"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_fullscreen"
        android:orderInCategory="100"
        android:title="@string/fullscreen"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_utran"
        android:checkable="true"
        android:checked="true"
        android:orderInCategory="100"
        android:title="@string/skip_utran"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_semuxa"
        android:orderInCategory="100"
        android:title="@string/title_biblia"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_paralel"
        android:checkable="true"
        android:checked="true"
        android:orderInCategory="100"
        android:title="@string/paralel"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_font"
        android:orderInCategory="100"
        android:title="@string/menu_font_size_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_bright"
        android:orderInCategory="100"
        android:title="@string/Bright"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_dzen_noch"
        android:checkable="true"
        android:orderInCategory="100"
        android:title="@string/widget_day_d_n"
        app:showAsAction="never" />
</menu>