<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/share"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_fullscreen"
        android:orderInCategory="100"
        android:title="@string/fullscreen"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_font"
        android:orderInCategory="100"
        android:title="@string/menu_font_size_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_dzen_noch"
        android:orderInCategory="100"
        android:title="@string/dzen_noch"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_carkva"
        android:orderInCategory="100"
        android:title="@string/redagaktirovat"
        android:visible="false"
        app:showAsAction="never" />
</menu>