<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_font"
        android:orderInCategory="100"
        android:title="@string/menu_font_size_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_gallery"
        android:orderInCategory="100"
        android:title="@string/gallery"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_piarliny"
        android:icon="@drawable/book_piarliny"
        android:orderInCategory="100"
        android:title="@string/piarliny"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_dzen_noch"
        android:orderInCategory="100"
        android:title="@string/dzen_noch"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_carkva"
        android:orderInCategory="100"
        android:title="@string/redagaktirovat"
        android:visible="false"
        app:showAsAction="never" />
</menu>