<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_title"
        android:icon="@drawable/list"
        android:orderInCategory="100"
        android:title="@string/zmest"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_bright"
        android:orderInCategory="100"
        android:title="@string/Bright"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_set_page"
        android:orderInCategory="100"
        android:title="@string/set_page_bibliateka"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_inversion"
        android:checkable="true"
        android:orderInCategory="100"
        android:title="@string/inversion"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_print"
        android:orderInCategory="100"
        android:title="@string/print"
        app:showAsAction="never" />
</menu>